...
        app:layout_constraintBottom_toTopOf="@+id/games_won_value_tv"
        app:layout_constraintEnd_toEndOf="@+id/games_won_value_tv"
        app:layout_constraintTop_toBottomOf="@+id/player_id_value_tv"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/badge_iv"
        android:layout_width="86dp"
        android:layout_height="123dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
