...
        <TextView
            android:id="@+id/path_taken_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paths_taken_st"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/shortest_path_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/links_num_text"
            app:layout_constraintVertical_bias="0.5" />

...
